LVGL/build/log/idf_py_stderr_output_210478
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c: In function 'create_ui':
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:108:32: error: 'status' undeclared (first use in this function)
  108 |     lv_obj_set_style_text_font(status, &lv_font_montserrat_14, 0); // 设置状态标签字体
      |                                ^~~~~~
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:108:32: note: each undeclared identifier is reported only once for each function it appears in
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c: At top level:
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:54:13: warning: 'btn_event_cb' defined but not used [-Wunused-function]
   54 | static void btn_event_cb(lv_event_t *e) { // e 为 LVGL 事件对象
      |             ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:104: esp-idf/main/CMakeFiles/__idf_main.dir/User_LVGL.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5854: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
